<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_nano_degree_apps">My Nanodegree Apps</string>
    
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone_app">Capstone: My Own App</string>
    <string name="toast_spotify">This button will launch my spotify streamer app!</string>
    <string name="toast_scores">This button will launch my scores app!</string>
    <string name="toast_build_it">This button will launch my build it bigger app!</string>
    <string name="toast_library">This button will launch my library app!</string>
    <string name="toast_xyz_reader">This button will launch my xyz reader app!</string>
    <string name="toast_capstone">This button will launch my capstone app!</string>
</resources>
