<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/background_app"
                tools:context=".MainActivity">

    <TextView
        android:text="@string/title_nano_degree_apps"
        android:textColor="@color/text_color_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/textView"
        />

    <Button
        android:text="@string/spotify_streamer"
        android:id="@+id/button_spotify"
        android:layout_below="@+id/textView"
        android:layout_marginTop="@dimen/margin_large"
        style="@style/ButtonBase.Udacity"
        />

    <Button
        android:text="@string/scores_app"
        android:id="@+id/button_scores"
        android:layout_below="@+id/button_spotify"
        style="@style/ButtonBase.Udacity"/>

    <Button
        android:text="@string/library_app"
        android:id="@+id/button_library"
        android:layout_below="@+id/button_scores"
        style="@style/ButtonBase.Udacity"/>

    <Button
        android:text="@string/build_it_bigger"
        android:id="@+id/button_build_it"
        android:layout_below="@+id/button_library"
        style="@style/ButtonBase.Udacity"/>

    <Button
        android:text="@string/xyz_reader"
        android:id="@+id/button_xyz_reader"
        android:layout_below="@+id/button_build_it"
        style="@style/ButtonBase.Udacity"/>

    <Button
        android:text="@string/capstone_app"
        android:id="@+id/button_capstone"
        android:layout_below="@+id/button_xyz_reader"
        style="@style/ButtonBase.Capstone"/>

</RelativeLayout>
